src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/column_too_big.bgs
FIELD
11 x 8 | 2

ISLANDS
( 11, 0 | 1 )
( 11, 5 | 1 )

BRIDGES
( 0, 1 | false )
